--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         ""
 resume_header_contact_info:     "四川 • 成都<br>PMP/CET4"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>  工作以来，主要从事iOS开发、项目管理、项目实训及文档编写相关工作，积累了丰富的开发经验和项目经验。能快速根据项目需求完成业务逻辑构建和代码实现<ul class=\"resume-item-list\"><li>熟练运用Swift/Objective-C开发语言、主流项目框架及常用数据结构、通信协议、算法和设计模式</li><li>熟练运用RxSwift+MVVM及组件化、核心动画构建、多线程操作等技术</li><li>熟练掌握前后端会话机制及数据通信方式，能快速对接三方SDK</li><li>熟悉HTML/CSS/JS/Node.js</li><li>熟悉Solidity、Ganache、OpenZeppelin、Remix进行合约开发部署及Web3生态相关业务</li></ul></p>"
+resume_header_intro: "<p>  工作以来，主要从事iOS开发、项目管理、项目实训及文档编写相关工作，积累了丰富的开发经验和项目经验。能快速根据项目需求完成业务逻辑构建和代码实现 <ul class=\"resume-item-list\"><li>熟练运用Swift/Objective-C开发语言、主流项目框架及常用数据结构、通信协议、算法和设计模式</li><li>熟练运用RxSwift+MVVM及组件化、核心动画构建、多线程操作等技术</li><li>熟练掌握前后端会话机制及数据通信方式，能快速对接三方SDK</li><li>熟悉HTML/CSS/JS/Node.js</li><li>熟悉Solidity、Ganache、OpenZeppelin、Remix进行合约开发部署及Web3生态相关业务</li></ul> <br> <a href=\"https://kk-vv.github.io/en\" style=\"color: #000 !important;\" >EN </a> </p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
